--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -43,18 +43,17 @@
   
 }
 
-/* .nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 200px;
-  background-color: white;
-  padding: 10px;
-} */
+
 
 .nav:hover ul {
   display: block;
 }
+
+.Title {
+  color: skyblue
+} 
+
+.slogan {
+  color: skyblue;
+}
+
