--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,8 +1,20 @@
 .home-page {
   text-align: center;
   padding: 50px;
-}
 
+  img {
+    border: 3px solid blue;
+    border-radius: 50%;
+    width: 400px;
+    height: 400px;
+    display: block;
+    margin: 0 auto;
+  }
+}
+.image-container {
+  position: relative;
+  display: inline-block;
+}
 h1 {
   font-size: 2em;
   margin-bottom: 20px;
@@ -19,3 +31,10 @@ h1 {
   cursor: pointer;
 }
 
+.calculator-image { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.7;
+}
